atlas-udd/gitlab/gitlab_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: atlas-gitlab
  namespace: atlas-udd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  rules:
  - host: atlas.gitlab
    http:
      paths:
      - path: /
        backend:
          serviceName: atlas-gitlab
          servicePort: 10080
